<resources>
    <string name="app_name">My_Restaurant</string>
    <string name="menu">MENU</string>
    <string name="starters">Starters</string>
    <string name="starters_image">Starters Image</string>
    <string name="pasta_salad_description">Pasta of your choice is dressed with a quick homemade arugula pesto and tossed with zucchini, green peas, and broccoli(vegan).................52₪</string>
    <string name="pasta_salad">Pasta salad</string>
    <string name="arancini">Arancini</string>
    <string name="arancini_description">Crispy breadcrumbed risotto balls, filled with fresh basil pesto and vegan mozzarella!(vegetrian).....61₪</string>
    <string name="grilled_eggplants">Grilled Eggplants</string>
    <string name="grilled_eggplant_description">Indulge in our oven-roasted eggplant medley, featuring a harmonious blend of grilled eggplant, pesto, and baked tomatoes, drizzled with garlic-infused olive oil and seasoned to perfection(vegan).....29₪</string>
    <string name="main_course">Main Course</string>
    <string name="main_course_image">Main Course Image</string>
    <string name="ravioli">Ravioli</string>
    <string name="ravioli_description">bathed in a tantalizing lemon cream sauce, enriched with Parmesan cheese, and adorned with creamy goat cheese, nestled amidst tender spinach leaves..................82₪</string>
    <string name="pizza_margherita">Pizza Margherita</string>
    <string name="pizza_description">adorned with vibrant arugula leaves that add a delightful peppery zest to each savory bite.................79₪</string>
    <string name="creamy_broccoli_pasta_with_four_cheeses">Creamy broccoli pasta with four cheeses</string>
    <string name="pasta_broccoli_description">Savor the richness of our decadent broccoli pasta, generously infused with four irresistible cheeses.................85₪</string>
    <string name="dessert">Dessert</string>
    <string name="Dessert_image" />
    <string name="tiramisu">"tiramisu "</string>
    <string name="tiramisu_description">Enjoy our classic Tiramisu: espresso-soaked ladyfingers layered with creamy mascarpone and dusted with cocoa.........52₪.</string>
    <string name="Dessert">Dessert</string>
    <string name="cream_Burlee_image">cream_Burlee</string>
    <string name="cream_Burlee">Crème Brûlée</string>
    <string name="cream_Burlee_description">Crème Brûlée, featuring a creamy custard topped with a delightfully caramelized sugar crust.........43₪.</string>
    <string name="Beverages">Beverages</string>
    <string name="softdrinks_description">Coca-Cola/Fanta/Soda ..................................7₪</string>
    <string name="softdrinks">soft drinks</string>
    <string name="pinklemonademimosa">pink Lemonade Mimosa</string>
    <string name="pinklemonademimosa_description">pink Lemonade Mimosa.............................35₪</string>
    <string name="mangomilkshake_description">"mango milkshake..........................24₪"</string>
    <string name="mangomilkshake">Mango milkshake</string>
    <string name="language">Language</string>
    <string name="how_would_you_like_to_pay">How would you like to pay</string>
    <string name="select_number_of_seats">select number of seats</string>
    <string name="please_enter_your_full_name_here">Please enter your full name here</string>
    <string name="please_enter_your_email_here">Please enter your email here</string>
    <string name="please_enter_your_phone_number_here">Please enter your phone number here</string>
    <string name="i_consent_to_share_the_information_with_the_restaurant_team_and_all_staff_members">I consent to share the information with the restaurant team and all staff members.</string>
    <string name="credit_card">Credit Card</string>
    <string name="reserve_seats">Reserve Seats</string>
    <string name="how_would_you_rate_your_experience">How would you rate your experience?</string>
    <string name="average_rating">Average Rating:</string>
    <string name="food">food</string>
    <string name="service">service</string>
    <string name="value">value</string>
    <string name="are_you_following_a_vegan_lifestyle">vegan vs not vegan</string>
    <string name="vegan">vegan</string>
    <string name="not_vegan">not vegan</string>
    <string name="select_arrival_time">select arrival time</string>
    <string name="cash">Cash</string>
    <string name="pick_date">pick date</string>
    <string name="please_select_your_preferred_arrival_time_below">please select your preferred arrival time below</string>
    <string name="reservation_details">Dear Guest, We are delighted to assist you in reserving a table for your dining experience. To proceed with your reservation, we kindly request that you provide the necessary details. Thank you for choosing us! we look forward to welcoming you soon.</string>
    <string name="payment_method">payment method</string>
    <string name="dietary_preference">Are you vegan?</string>
    <string name="WHAT_WE_BELIEVE">WHAT WE BELIEVE</string>
    <string name="quote">\"eating is an agricultural act\" Wendell Berry</string>
    <string name="book_a_table">Book a Table</string>
    <string name="Menu">Menu</string>
    <string name="rate_us">Rate us</string>
    <string name="thank_you">"Thank you"</string>
    <string name="menu_message">Explore our menu conveniently classified into starters, main course, desserts, and beverages. Take your time to browse through our offerings and savor the flavors of our cuisine.</string>
    <string name="dialog_title">For Your Convenience</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="incomplete_information_title">Incomplete Information</string>
    <string name="fill_required_fields_message">Please fill in all the required fields.</string>
    <string name="Agreement_Required">Agreement Required</string>
    <string name="Agree">Please agree to share the information with the restaurant team and all staff members.</string>
    <string name="reservation_details_title">reservation details</string>
    <string name="full_name_label">full name</string>
    <string name="email_label">email</string>
    <string name="phone_number_label">phone number</string>
    <string name="seat_selection_label">For</string>
    <string name="selected_date_label">On</string>
    <string name="vegan_label">Vegan</string>
    <string name="yes_label">yes</string>
    <string name="no_label">no</string>
    <string name="people_label">people</string>
    <string name="payment_label">Payment</string>
    <string name="cash_label">Cash</string>
    <string name="credit_card_label">credit card</string>
    <string name="confirm_reservation_message">Do you want to confirm this reservation?</string>
    <string name="confirm_button">Confirm</string>
    <string name="reservation_accepted_title">Your reservation is accepted</string>
    <string name="reservation_accepted_message">Your reservation has been saved</string>
    <string name="cancel_button">cancel</string>
    <string name="average_rating_label">Average Rating: %.1f</string>
    <string name="adjusting_service_rating">Adjusting Service Rating</string>
    <string name="adjusting_food_taste_rating">Adjusting Food Taste Rating</string>
    <string name="adjusting_value_rating">Adjusting Value Rating</string>
    <string name="service_rating_set">Service Rating Set</string>
    <string name="food_taste_rating_set">Food Taste Rating Set</string>
    <string name="value_rating_set">Value Rating Set</string>
    <string name="back">back</string>
    <string name="invalid_email_title">Invalid email</string>
    <string name="invalid_phone_number_title">invalid phone number</string>
    <string name="invalid_email_message">Please enter a valid email address</string>
    <string name="invalid_phone_number_message">Phone number must be 10 digits long.</string>
    <string name="ourmenu">Our menu</string>
    <string name="text_changed">Text changed: </string>
    <string name="selected_item">selected item</string>
    <string name="invalid_full_name_title">invalid full name</string>
    <string name="invalid_full_name_message">Your name should consist of two fields with a space between them.</string>
    <string name="provide_feedback_label">provide feedback</string>
    <string name="write_feedback_hint">write feedback</string>
    <string name="save_feedback_button_label">save</string>
    <string name="Feedbacksaved">feedback saved</string>

</resources>