<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rateus1"
    android:orientation="vertical"
    tools:context=".RateActivity">

    <!-- Include Toolbar -->
    <include layout="@layout/toolbar_layout" />

    <TextView
        android:id="@+id/rating_instruction_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="16dp"
        android:text="@string/how_would_you_rate_your_experience"
        android:textColor="@color/cream_color"
        android:textStyle="bold"
        android:textSize="26sp" />

    <!-- SeekBar Section -->

    <TextView
        android:id="@+id/average_rating_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/average_rating"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold" />
    <!-- Thank You Animation -->

    <TextView
        android:id="@+id/thankyou"
        android:layout_width="86dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="100dp"
        android:text="@string/thank_you"
        android:gravity="center_vertical"
        android:textColor="@color/cream_color"
        android:textSize="12sp"
        android:textStyle="bold"
        android:visibility="visible" />
    <!-- Service -->

    <TextView
        android:id="@+id/service_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/service"
        android:textColor="@color/cream_color"
        android:textSize="22sp" />

    <SeekBar
        android:id="@+id/service_seekbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:max="10"
        android:progress="5" />



    <!-- Food -->


    <TextView
        android:id="@+id/food_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/food"
        android:textColor="@color/cream_color"
        android:textSize="22sp" />

    <SeekBar
        android:id="@+id/food_taste_seekbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:max="10"
        android:progress="5" />

    <!-- Value -->
    <TextView
        android:id="@+id/value_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/value"
        android:textColor="@color/cream_color"
        android:textSize="22sp" />

    <SeekBar
        android:id="@+id/value_seekbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:max="10"
        android:progress="5" />


    <!-- Replace the Switch widget with SwitchCompat -->
    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/feedback_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/provide_feedback_label"
        android:layout_marginTop="26dp"
        android:layout_gravity="center"
        app:thumbTint="@color/cream_color" />


    <EditText
        android:id="@+id/feedback_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/default_gap"
        android:hint="@string/write_feedback_hint"
        android:visibility="gone"
        android:background="@color/cream_color"
        android:inputType="textMultiLine"
        android:minLines="4" />

    <Button
        android:id="@+id/save_feedback_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_feedback_button_label"
        android:layout_gravity="center"
        android:visibility="gone"
        android:layout_marginTop="16dp" />


</LinearLayout>
