<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- ScrollView to allow scrolling when content overflows -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:visibility="visible">

        <LinearLayout
            android:id="@+id/background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/background6_image">

            <!-- Image View for background image -->
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/resterunt2"
                android:scaleType="centerCrop" />

            <LinearLayout
                android:id="@+id/main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- "What we believe" section -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/WHAT_WE_BELIEVE"
                    android:fontFamily="sans-serif-light"
                    android:textStyle="italic"
                    android:gravity="center"
                    android:textColor="@color/cream_color"
                    android:textSize="35sp"
                    app:layout_constraintTop_toBottomOf="@id/background"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <!-- Quote -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/quote"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:textColor="@color/cream_color"
                    android:textSize="29sp"
                    app:layout_constraintTop_toBottomOf="@id/main"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <!-- Reservation, rateUs and Menu Buttons -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    app:layout_constraintTop_toBottomOf="@id/main"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                    <!-- Book a Table Button -->
                    <Button
                        android:id="@+id/bookTableButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="22dp"
                        android:textStyle="bold"
                        android:text="@string/book_a_table"
                        android:textColor="@color/black"
                        android:layout_marginEnd="8dp" />

                    <!-- Menu Button -->
                    <Button
                        android:id="@+id/Menu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="22dp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:text="@string/Menu"
                        android:layout_marginEnd="8dp" />

                    <!-- Rate Us Button -->
                    <Button
                        android:id="@+id/rateUs"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="22dp"
                        android:text="@string/rate_us"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:layout_marginEnd="8dp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
